Add ScanTestSupport utility class and improve code readability
- Introduced ScanTestSupport class to centralize reflection-based helpers for Profile and ProfileNFO creation.
- Updated .classpath files in jrmfx, jrmserver, and jrmstandalone to include necessary library dependencies.
- Refactored BatchDirUpd8rResultsController and BatchToolsPanelController for improved readability and consistency.
- Removed unnecessary print stack traces in FullServer and replaced with proper logging.
- Enhanced error handling in ScannerPanel by extracting methods for better clarity.
- Updated date parsing in ImageServlet to use ZonedDateTime for better date handling.
- Cleaned up code in JFileDrop and JSDRDropTable to utilize modern Java features like toList().
- Minor adjustments in SettingsCompressorsPanel and BatchCompressorPanel for consistency and readability.